// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput snapshots renders a required TextInput 1`] = `
<div>
  <div
    class="usa-form-group "
  >
    <label
      class="usa-label "
      for="test-input"
    >
      Testing Input
      <span
        class="required-star"
      >
        *
      </span>
    </label>
    <div
      class="usa-input-group"
    >
      <input
        class="usa-input"
        id="test-input"
        name="testing-input"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput snapshots renders an error 1`] = `
<div>
  <div
    class="usa-form-group "
  >
    <label
      class="usa-label "
      for="test-input"
    >
      Testing Input
    </label>
    <div
      class="usa-input-group"
    >
      <input
        class="usa-input"
        id="test-input"
        name="testing-input"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput snapshots renders the default TextInput 1`] = `
<div>
  <div
    class="usa-form-group "
  >
    <label
      class="usa-label "
      for="test-input"
    >
      Testing Input
    </label>
    <div
      class="usa-input-group"
    >
      <input
        class="usa-input"
        id="test-input"
        name="testing-input"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput snapshots renders the prefix and suffix 1`] = `
<div>
  <div
    class="usa-form-group "
  >
    <label
      class="usa-label "
      for="test-input"
    >
      Testing Input
    </label>
    <div
      class="usa-input-group"
    >
      <span
        aria-hidden="true"
        class="usa-input-prefix"
      >
        $
      </span>
      <input
        class="usa-input"
        id="test-input"
        name="testing-input"
      />
      <span
        aria-hidden="true"
        class="usa-input-suffix"
      >
        lbs.
      </span>
    </div>
  </div>
</div>
`;

exports[`TextInput snapshots renders the success state 1`] = `
<div>
  <div
    class="usa-form-group "
  >
    <label
      class="usa-label "
      for="test-input"
    >
      Testing Input
    </label>
    <div
      class="usa-input-group usa-input--success"
    >
      <input
        class="usa-input"
        id="test-input"
        name="testing-input"
      />
    </div>
  </div>
</div>
`;
